outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval-2250060671775400877_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, dynamic regret scaling, and a novel "path potential" metric that balances immediate distance, long-term connectivity, and node diversity, while using a decaying penalty for revisiting regions.}
                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance, dynamic regret scaling, and a novel "path potential" metric that balances immediate distance, long-term connectivity, and node diversity, while using a decaying penalty for revisiting regions.}
                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
